# cdocs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt  comment.h  project.cpp  project.h
cli/: CMakeLists.txt  main.cpp
testing/: function.h
third/: CMakeLists.txt
third/nlohmann_json/: CMakeLists.txt
